# backend/routes/user.js
@@ -3,7 +3,7 @@ const userController = require('../controllers/user')
 const router = express.Router()
 
 router.get('/:username', userController.findUsersByUsername)
-router.get('/', userController.getUserProfile)
-router.put('/', userController.updateProfile)
+router.get('/profile', userController.getUserProfile)
+router.put('/update', userController.updateProfile)
 
 module.exports = router
